--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,76 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Rick AI Assistant</title>
+    <title>Simple Rick</title>
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            max-width: 800px; 
-            margin: 0 auto; 
-            padding: 20px;
-            background: #1a1a1a;
-            color: white;
+        
+        <body>
+    <!-- Header -->
+    <div class="header">
+        <h1>🤖 Simple Rick</h1>
+        <p>
+            <span class="letter">R</span><span class="letter">i</span><span class="letter">c</span><span class="letter">k</span> 
+            <span class="number">&</span> <span class="letter">M</span><span class="letter">o</span><span class="letter">r</span><span class="letter">t</span><span class="letter">y</span>!
+        </p>
+    </div>
+
+    <!-- Chat Box -->
+    <div class="chat-box" id="chatBox">
+        <div class="ai-message">
+            <span class="ai-name">Simple Rick</span>: Wubba lubba dub dub! let's get swifty!
+        </div>
+    </div>
+
+    <!-- User Input -->
+    <input type="text" id="userInput" placeholder="Type your message...">
+
+    <!-- Send Button -->
+    <button onclick="sendMessage()">Send Message</button>
+
+    <!-- JS for chat -->
+    <script>
+        async function sendMessage() {
+            const input = document.getElementById("userInput");
+            const message = input.value.trim();
+            if (!message) return;
+
+            const chatBox = document.getElementById("chatBox");
+            chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">You</span>: ${message}</div>`;
+            input.value = "";
+            chatBox.scrollTop = chatBox.scrollHeight;
+
+            // Example backend call
+            try {
+                const res = await fetch("http://localhost:3000/chat", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ message })
+                });
+                const data = await res.json();
+                const aiReply = data.reply || "Stop acting like a Morty, *burp*";
+                chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">Simple Rick</span>: ${aiReply}</div>`;
+                chatBox.scrollTop = chatBox.scrollHeight;
+            } catch (err) {
+                chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">Simple Rick</span>: Error connecting to backend!</div>`;
+            }
         }
 
-        .header {
-            text-align: center;
-            background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
-            color: white;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        .letter {
-            color: #ff6b6b;
-            font-weight: bold;
-        }
-
-        .number {
-            color: #00d8a0;
-            font-weight: bold;
-        }
-
-        .chat-box {
-            background: #2d2d2d;
-            border: 1px solid #444;
-            height: 300px;
-            overflow-y: auto;
-            padding: 15px;
-            margin-bottom: 15px;
-            border-radius: 10px;
-        }
-
-        .ai-message { 
-            background: #2d2d2d; 
-            padding: 10px; 
-            margin: 8px 0; 
-            border-radius: 10px;
-            border: 1px solid #444;
-        }
-
-        input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #444;
-            border-radius: 8px;
-            background: #2d2d2d;
-            color: white;
-            font-size: 16px;
-        }
-
-        button { 
-            background: #00d8a0; 
-            color: black; 
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: bold;
-            margin-top: 10px;
-            width: 100%;
-        }
+        // Enter key to send
+        document.getElementById("userInput").addEventListener("keypress", e => {
+            if (e.key === "Enter") sendMessage();
+        });
+    </script>
+</body>
 
         .ai-name {
             color: #00d8a0;
@@ -82,7 +73,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>🤖 Simple Rick AI Assistant</h1>
+        <h1>🤖 Simple Rick</h1>
         <p>
             <span class="letter">R</span><span class="letter">e</span><span class="letter">d</span> 
             <span class="letter">l</span><span class="letter">e</span><span class="letter">t</span><span class="letter">t</span><span class="letter">e</span><span class="letter">r</span><span class="letter">s</span> 
@@ -140,9 +131,9 @@
             chatBox.scrollTop = chatBox.scrollHeight;
         }
 
-        function colorizeText(text) {
-            return text.replace(/([a-zA-Z])/g, '<span class="letter">$1</span>')
-                       .replace(/([0-9])/g, '<span class="number">$1</span>');
+        function rickify(text) {
+    return text.replace(/\b([a-zA-Z])\b/g, "$1-$1") // tiny stutter effect
+               .replace(/ /g, " *burp* "); // adds burps occasionally
         }
 
         document.getElementById("userInput").addEventListener("keypress", function(e) {
@@ -151,3 +142,5 @@
     </script>
 </body>
   </html>
+
+
