Add Google Fonts link to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Rick</title>
@@ -72,7 +73,7 @@
     </style>
 </head>
 <body>
-    <div class="header">
+    <div class="header"> 
         <h1>🤖 Simple Rick</h1>
         <p>
             <span class="letter">R</span><span class="letter">e</span><span class="letter">d</span> 
