--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,147 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Rick</title>
-    <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
-    <style>
-        
-        <body>
-    <!-- Header -->
-    <div class="header">
-        <h1>🤖 Simple Rick</h1>
-        <p>
-            <span class="letter">R</span><span class="letter">i</span><span class="letter">c</span><span class="letter">k</span> 
-            <span class="number">&</span> <span class="letter">M</span><span class="letter">o</span><span class="letter">r</span><span class="letter">t</span><span class="letter">y</span>!
-        </p>
-    </div>
-
-    <!-- Chat Box -->
-    <div class="chat-box" id="chatBox">
-        <div class="ai-message">
-            <span class="ai-name">Simple Rick</span>: Wubba lubba dub dub! let's get swifty!
-        </div>
-    </div>
-
-    <!-- User Input -->
-    <input type="text" id="userInput" placeholder="Type your message...">
-
-    <!-- Send Button -->
-    <button onclick="sendMessage()">Send Message</button>
-
-    <!-- JS for chat -->
-    <script>
-        async function sendMessage() {
-            const input = document.getElementById("userInput");
-            const message = input.value.trim();
-            if (!message) return;
-
-            const chatBox = document.getElementById("chatBox");
-            chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">You</span>: ${message}</div>`;
-            input.value = "";
-            chatBox.scrollTop = chatBox.scrollHeight;
-
-            // Example backend call
-            try {
-                const res = await fetch("http://localhost:3000/chat", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message })
-                });
-                const data = await res.json();
-                const aiReply = data.reply || "Stop acting like a Morty, *burp*";
-                chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">Simple Rick</span>: ${aiReply}</div>`;
-                chatBox.scrollTop = chatBox.scrollHeight;
-            } catch (err) {
-                chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">Simple Rick</span>: Error connecting to backend!</div>`;
-            }
-        }
-
-        // Enter key to send
-        document.getElementById("userInput").addEventListener("keypress", e => {
-            if (e.key === "Enter") sendMessage();
-        });
-    </script>
-</body>
-
-        .ai-name {
-            color: #00d8a0;
-            font-weight: bold;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Simple Rick AI</title>
+<link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
+<link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+<style>
+    body {
+        font-family: 'UnifrakturCook', 'Old English Text MT', serif;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        background: #1a1a1a;
+        color: white;
+    }
+    .header {
+        text-align: center;
+        background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+        color: white;
+        padding: 20px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+    }
+    .letter { color: #ff6b6b; font-weight: bold; }
+    .number { color: #00d8a0; font-weight: bold; }
+    .chat-box {
+        background: #2d2d2d;
+        border: 1px solid #444;
+        height: 400px;
+        overflow-y: auto;
+        padding: 15px;
+        margin-bottom: 15px;
+        border-radius: 10px;
+    }
+    .ai-message { 
+        background: #2d2d2d; 
+        padding: 10px; 
+        margin: 8px 0; 
+        border-radius: 10px;
+        border: 1px solid #444;
+    }
+    input {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #444;
+        border-radius: 8px;
+        background: #2d2d2d;
+        color: white;
+        font-size: 16px;
+    }
+    button { 
+        background: #00d8a0; 
+        color: black; 
+        padding: 12px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-weight: bold;
+        margin-top: 10px;
+        width: 100%;
+    }
+    .ai-name { color: #00d8a0; font-weight: bold; }
+</style>
 </head>
 <body>
-    <div class="header"> 
-        <h1>🤖 Simple Rick</h1>
-        <p>
-            <span class="letter">R</span><span class="letter">e</span><span class="letter">d</span> 
-            <span class="letter">l</span><span class="letter">e</span><span class="letter">t</span><span class="letter">t</span><span class="letter">e</span><span class="letter">r</span><span class="letter">s</span> 
-            <span class="number">&</span> 
-            <span class="number">g</span><span class="number">r</span><span class="number">e</span><span class="number">e</span><span class="number">n</span> 
-            <span class="number">n</span><span class="number">u</span><span class="number">m</span><span class="number">b</span><span class="number">e</span><span class="number">r</span><span class="number">s</span>!
-        </p>
+<div class="header">
+    <h1>🤖 Simple Rick AI Assistant</h1>
+</div>
+
+<div class="chat-box" id="chatBox">
+    <div class="ai-message">
+        <span class="ai-name">Simple Rick</span>: Wubba lubba dub dub! Start askin’, Morty!
     </div>
+</div>
 
-    <div class="chat-box" id="chatBox">
-        <div class="ai-message">
-            <span class="ai-name">Simple Rick</span>: 
-            <span class="letter">H</span><span class="letter">e</span><span class="letter">l</span><span class="letter">l</span><span class="letter">o</span>! 
-            <span class="number">I</span><span class="number">'</span><span class="number">m</span> 
-            <span class="letter">S</span><span class="letter">i</span><span class="letter">m</span><span class="letter">p</span><span class="letter">l</span><span class="letter">e</span> 
-            <span class="number">R</span><span class="number">i</span><span class="number">c</span><span class="number">k</span>!
-        </div>
-    </div>
+<input type="text" id="userInput">
+<button onclick="sendMessage()">Send Message</button>
 
-    <input type="text" id="userInput" placeholder="Type your message...">
-    <button onclick="sendMessage()">Send Message</button>
+<script>
+    function rickify(text) {
+        text = text.replace(/\./g, " *burp*.");
+        text = text.replace(/\b([a-zA-Z]{1,3})\b/g, "$1-$1");
+        return text;
+    }
 
-    <script>
-        async function sendMessage() {
-            const input = document.getElementById("userInput");
-            const message = input.value;
-            if (!message) return;
+    function colorizeText(text) {
+        return text.replace(/([a-zA-Z])/g, '<span class="letter">$1</span>')
+                   .replace(/([0-9])/g, '<span class="number">$1</span>');
+    }
 
-            const chatBox = document.getElementById("chatBox");
+    async function sendMessage() {
+        const input = document.getElementById("userInput");
+        const message = input.value.trim();
+        if (!message) return;
 
-            // Show user message
-            chatBox.innerHTML += '<div class="ai-message"><span class="ai-name">You</span>: ' 
-                + colorizeText(message) + '</div>';
-            input.value = "";
+        const chatBox = document.getElementById("chatBox");
 
-            // Call backend API
-            try {
-                const response = await fetch("http://localhost:3000/chat", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message })
-                });
+        chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">You</span>: ${colorizeText(message)}</div>`;
+        input.value = "";
+        chatBox.scrollTop = chatBox.scrollHeight;
 
-                const data = await response.json();
-                const aiReply = data.reply || "Error: No reply from server.";
+        try {
+            const response = await fetch("http://localhost:3000/chat", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ message })
+            });
+            const data = await response.json();
+            let aiReply = data.reply || "QUIT ACTING LIKE A MORTY!!";
+            aiReply = rickify(aiReply);
 
-                // Show AI reply
-                chatBox.innerHTML += '<div class="ai-message"><span class="ai-name">Simple Rick</span>: ' 
-                    + colorizeText(aiReply) + '</div>';
-            } catch (err) {
-                chatBox.innerHTML += '<div class="ai-message"><span class="ai-name">Simple Rick</span>: ' 
-                    + colorizeText("Error: Cannot reach backend.") + '</div>';
-            }
-
+            chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">Simple Rick</span>: ${colorizeText(aiReply)}</div>`;
+            chatBox.scrollTop = chatBox.scrollHeight;
+        } catch (err) {
+            chatBox.innerHTML += `<div class="ai-message"><span class="ai-name">Simple Rick</span>: QUIT ACTING LIKE A MORTY!! *burp*</div>`;
             chatBox.scrollTop = chatBox.scrollHeight;
         }
+    }
 
-        function rickify(text) {
-    return text.replace(/\b([a-zA-Z])\b/g, "$1-$1") // tiny stutter effect
-               .replace(/ /g, " *burp* "); // adds burps occasionally
-        }
-
-        document.getElementById("userInput").addEventListener("keypress", function(e) {
-            if (e.key === "Enter") sendMessage();
-        });
-    </script>
+    document.getElementById("userInput").addEventListener("keypress", function(e) {
+        if (e.key === "Enter") sendMessage();
+    });
+</script>
 </body>
-  </html>
-
-
+</html>
